# teknofest-simulator

./: CMakeLists.txt  LICENSE  README.en.md  README.md  README.tr.md  package.xml
launch/: start.launch
models/a_mission/: a_mission.dae  a_mission.sdf
models/ball/: ball.dae  ball.sdf
models/c_mission/: c_mission.dae  c_mission.sdf
models/circles/: circles.config  circles.dae  circles.sdf  model.config
models/pool/: model.config  pool.blend  pool.blend1  pool.dae
models/sky_box/: model.config
models/start_gate/: qual_pole.config  qual_pole.sdf  start_gate.config  start_gate.sdf
world/: pool.world
